# zkVerify

./: .dockerignore  .gitignore  Cargo.toml  HEADER-APACHE2  HEADER-GPL3  README.md  RELAY.md  RUN_LOCAL_NET.md  cfg  clean_ci.sh  notes_about_network.md  runs.txt
ci/: common.sh  (+7 more)
native/: Cargo.toml  build.rs
native/src/: foo.rs  groth16.rs  lib.rs  proofofsql.rs  risc0.rs  ultraplonk.rs  zksync.rs
native/src/accelerated_bn/: bn254.rs  mod.rs  test_utils.rs  tests.rs  utils.rs
node/: Cargo.toml  build.rs  hl-deploy-weight-template.hbs  hl-pallets-weight-template.hbs  zkv-db-weight-template.hbs  zkv-deploy-weight-template-xcm.hbs  zkv-deploy-weight-template.hbs
node/chain-specs/: zkverify_testnet.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  hardware.rs  main.rs  reference_hardware.json  rpc.rs  service.rs
pallets/accelerated-bn-crypto/: Cargo.toml
pallets/accelerated-bn-crypto/src/: benchmarking.rs  bn254.rs  lib.rs  mock.rs  tests.rs  utils.rs  weights.rs
pallets/hyperbridge_aggregations/: Cargo.toml
pallets/hyperbridge_aggregations/src/: benchmarking.rs  lib.rs  mock.rs  weight.rs
pallets/pay-on-demand-poc/: Cargo.toml
pallets/pay-on-demand-poc/src/: lib.rs  mock.rs  tests.rs
pallets/proof_of_existence/: Cargo.toml  README.md
pallets/proof_of_existence/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  weight.rs
pallets/proof_of_existence_rpc/: Cargo.toml
pallets/proof_of_existence_rpc/runtime-api/: Cargo.toml
pallets/proof_of_existence_rpc/src/: lib.rs
pallets/settlement-fflonk/: Cargo.toml
pallets/settlement-fflonk/src/: benchmarking.rs  lib.rs  mock.rs  proof.rs  resources.rs  tests.rs  vk.rs  weight.rs
pallets/settlement-groth16/: Cargo.toml
pallets/settlement-groth16/src/: benchmarking.rs  data_structures.rs  dummy_circuit.rs  groth16.rs  groth16_generic.rs  lib.rs  mock.rs  resources.rs  tests.rs  weight.rs
pallets/settlement-risc0/: Cargo.toml
pallets/settlement-risc0/src/: benchmarking.rs  data.rs  lib.rs  mock.rs  tests.rs  weight.rs
pallets/settlement-zksync/: Cargo.toml
pallets/settlement-zksync/src/: benchmarking.rs  lib.rs  mock.rs  proof.rs  tests.rs  weight.rs
pallets/verifiers/: Cargo.toml
pallets/verifiers/macros/: Cargo.toml
pallets/verifiers/src/: common.rs  lib.rs  mock.rs  tests.rs  utils.rs
paratest/node/: Cargo.toml  build.rs
paratest/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
paratest/runtime/: Cargo.toml  build.rs
paratest/runtime/src/: lib.rs  xcm_config.rs
primitives/hp-groth16/: Cargo.toml
primitives/hp-groth16/src/: data_structures.rs  dummy_circuit.rs  lib.rs  resources.rs
primitives/hp-proof-of-existence/: Cargo.toml
primitives/hp-proof-of-existence/src/: lib.rs
primitives/hp-verifiers/: Cargo.toml
primitives/hp-verifiers/src/: lib.rs
relay-node/: Cargo.toml  build.rs
relay-node/.cargo/: config.toml
relay-node/cli/: Cargo.toml  build.rs
relay-node/cli/src/: cli.rs  command.rs  error.rs  lib.rs
relay-node/service/: Cargo.toml
relay-node/service/chain-specs/: zkverify_testnet.json
relay-node/service/src/: benchmarking.rs  chain_spec.rs  fake_runtime_api.rs  grandpa_support.rs  lib.rs  overseer.rs  polkadot_rpc.rs  relay_chain_selection.rs  rpc.rs  tests.rs  workers.rs
relay-node/src/: main.rs
relay-node/test/client/: Cargo.toml
relay-node/test/runtime/: Cargo.toml  build.rs
relay-node/test/service/: Cargo.toml  README.md
relay-node/test/subsystem-helpers/: Cargo.toml
relay-node/tests/: benchmark_block.rs  benchmark_extrinsic.rs  benchmark_overhead.rs  benchmark_storage_works.rs  invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  workers.rs
relay-node/tests/common/: mod.rs
rpc/aggregate/: Cargo.toml
rpc/aggregate/runtime-api/: Cargo.toml
rpc/aggregate/src/: lib.rs
rpc/attestation/: Cargo.toml
rpc/attestation/runtime-api/: Cargo.toml
rpc/attestation/src/: lib.rs
rpc/proof_of_existence/: Cargo.toml
rpc/proof_of_existence/runtime-api/: Cargo.toml
rpc/proof_of_existence/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: bag_thresholds.rs  lib.rs  macros.rs  migrations.rs  null_currency.rs  parachains.rs  paratest_genesis  paratest_wasm  payout.rs  proxy.rs  tests.rs  weights.rs  xcm_config.rs
runtime/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/src/tests/: availability.rs  misc.rs  pallets_interact.rs  payout.rs  testsfixtures.rs  use_correct_weights.rs
runtime/src/weights/: block_weights.rs  db.rs  extrinsic_weights.rs  frame_election_provider_support.rs  frame_system.rs  pallet_aggregate.rs  pallet_attestation.rs  pallet_babe.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_conviction_voting.rs  pallet_election_provider_support.rs  pallet_fflonk_verifier.rs  pallet_foo_verifier.rs  pallet_grandpa.rs  pallet_groth16_verifier.rs  pallet_hyperbridge_aggregations.rs  pallet_im_online.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_plonky2_verifier.rs  pallet_poe.rs  pallet_preimage.rs  pallet_proofofsql_verifier.rs  pallet_proxy.rs  pallet_referenda.rs  pallet_risc0_verifier.rs  pallet_scheduler.rs  pallet_session.rs  pallet_settlement_fflonk.rs  pallet_settlement_groth16.rs  pallet_settlement_risc0.rs  pallet_settlement_zksync.rs  pallet_staking.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_ultraplonk_verifier.rs  (+7 more)
runtime/tests/: test.rs
utils/generate-bags/: Cargo.toml
utils/generate-bags/artifacts/: zk_verify_runtime_metadata.scale
utils/generate-bags/node-runtime/: Cargo.toml
utils/generate-bags/src/: lib.rs
utils/native-cache/: Cargo.toml
utils/native-cache/src/: config.rs  dependency.rs  helpers.rs  lib.rs  lib_dependency.rs  rocksdb.rs  ultraplonk.rs
verifiers/fflonk/: Cargo.toml
verifiers/fflonk/src/: benchmarking.rs  lib.rs  resources.rs  verifier_should.rs  vk.rs  weight.rs
verifiers/foo/: Cargo.toml
verifiers/foo/src/: benchmarking.rs  lib.rs  resources.rs  verifier_should.rs
verifiers/groth16/: Cargo.toml
(+337 files in other folders)
