[workspace.package]
authors = ["Horizen Labs <admin@horizenlabs.io>"]
edition = "2021"
repository = "https://github.com/HorizenLabs/zkVerify"
homepage = "https://horizenlabs.io"

[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "pallets/proof_of_existence",
    "primitives/hp-proof-of-existence",
    "native",
    "pallets/verifiers",
    "pallets/verifiers/macros",
    "primitives/hp-verifiers",
    "verifiers/fflonk",
    "verifiers/zksync",
    "verifiers/groth16",
    "verifiers/risc0",
    "verifiers/ultraplonk",
]

[workspace.dependencies]
clap = { version = "4.4.10", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
jsonrpsee = { version = "0.22.5", features = ["server"] }
binary-merkle-tree = { default-features = false, version = "15.0.0" }
snafu = { version = "0.8.0", default-features = false }
async-trait = { version = "0.1.57" }
serde = { version = "1.0.197" }
rstest = { version = "0.19.0" }
rstest_reuse = { version = "0.7.0" }

sc-cli = { version = "0.40.0" }
sc-executor = { version = "0.36.0" }
sc-network = { version = "0.38.0" }
sc-service = { version = "0.39.0" }
sc-telemetry = { version = "18.0.0" }
sc-transaction-pool = { version = "32.0.0" }
sc-transaction-pool-api = { version = "32.0.0" }
sc-offchain = { version = "33.0.0" }
sc-consensus-babe = { version = "0.38.0" }
sc-consensus-babe-rpc = { version = "0.38.0" }
sc-consensus = { version = "0.37.0" }
sc-consensus-grandpa = { version = "0.23.0" }
sc-consensus-grandpa-rpc = { version = "0.23.0" }
sc-client-api = { version = "32.0.0" }
sc-sysinfo = { version = "31.0.0" }

pallet-transaction-payment = { default-features = false, version = "32.0.0" }

sp-io = { default-features = false, version = "34.0.0" }
sp-timestamp = { default-features = false, version = "30.0.0" }
sp-keyring = { version = "35.0.0" }
sp-keystore = { version = "0.38.0" }

native = { default-features = false, path = "native" }
pallet-poe = { path = "pallets/proof_of_existence", default-features = false }
pallet-verifiers = { path = "pallets/verifiers", default-features = false }
pallet-verifiers-macros = { path = "pallets/verifiers/macros" }
hp-verifiers = { path = "primitives/hp-verifiers", default-features = false }
pallet-fflonk-verifier = { path = "verifiers/fflonk", default-features = false }
pallet-zksync-verifier = { path = "verifiers/zksync", default-features = false }
pallet-groth16-verifier = { path = "verifiers/groth16", default-features = false }
pallet-risc0-verifier = { path = "verifiers/risc0", default-features = false }
pallet-ultraplonk-verifier = { path = "verifiers/ultraplonk", default-features = false }

zkv-runtime = { path = "runtime", default-features = false }

# These dependencies are used for the node template's RPCs
sc-rpc = { version = "33.0.0" }
sc-rpc-api = { version = "0.37.0" }
sp-blockchain = { version = "32.0.0" }
sc-basic-authorship = { version = "0.38.0" }
substrate-frame-rpc-system = { version = "32.0.0" }
frame-election-provider-support = { version = "32.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "31.0.0", default-features = false }
pallet-session-benchmarking = { version = "32.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "34.0.0" }
frame-benchmarking-cli = { version = "36.0.0" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.42.0" }

codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
    "serde",
] }

pallet-offences = { default-features = false, version = "31.0.0" }
pallet-im-online = { default-features = false, version = "31.0.0" }
pallet-authorship = { default-features = false, version = "32.0.0" }
pallet-session = { default-features = false, version = "32.0.0" }
pallet-staking = { default-features = false, version = "32.0.0" }
pallet-staking-reward-curve = { default-features = false, version = "11.0.0" }
pallet-babe = { default-features = false, version = "32.0.0" }
pallet-balances = { default-features = false, version = "33.0.0" }
frame-support = { default-features = false, version = "32.0.0" }
pallet-grandpa = { default-features = false, version = "32.0.0" }
pallet-sudo = { default-features = false, version = "32.0.0" }
pallet-multisig = { default-features = false, version = "32.0.0" }
pallet-scheduler = { default-features = false, version = "33.0.0" }
pallet-preimage = { default-features = false, version = "32.0.0" }
pallet-referenda = { default-features = false, version = "32.0.0" }
pallet-whitelist = { default-features = false, version = "31.0.0" }
pallet-conviction-voting = { default-features = false, version = "32.0.0" }
frame-system = { default-features = false, version = "32.0.0" }
frame-try-runtime = { default-features = false, version = "0.38.0" }
pallet-timestamp = { default-features = false, version = "31.0.0" }
frame-executive = { default-features = false, version = "32.0.0" }
sp-api = { default-features = false, version = "30.0.0" }
sp-block-builder = { default-features = false, version = "30.0.0" }
sp-consensus = { default-features = false, version = "0.36.0" }
sp-consensus-babe = { default-features = false, features = [
    "serde",
], version = "0.36.0" }
finality-grandpa = { default-features = false, version = "0.16.2" }
sp-consensus-grandpa = { default-features = false, features = [
    "serde",
], version = "17.0.0" }
sp-core = { default-features = false, features = ["serde"], version = "32.0.0" }
sp-inherents = { default-features = false, version = "30.0.0" }
sp-offchain = { default-features = false, version = "30.0.0" }
sp-runtime = { default-features = false, features = [
    "serde",
], version = "35.0.0" }
sp-runtime-interface = { version = "27.0.0", default-features = false }
sp-session = { default-features = false, version = "31.0.0" }
sp-staking = { default-features = false, version = "30.0.0" }
sp-std = { default-features = false, version = "14.0.0" }
sp-storage = { default-features = false, version = "21.0.0" }
sp-transaction-pool = { default-features = false, version = "30.0.0" }
sp-version = { default-features = false, features = [
    "serde",
], version = "33.0.0" }
serde_json = { version = "1.0.108", default-features = false, features = [
    "alloc",
] }
sp-weights = { default-features = false, version = "31.0.0" }
sp-genesis-builder = { default-features = false, version = "0.11.0" }
hp-poe = { default-features = false, path = "primitives/hp-proof-of-existence" }
proof-of-existence-rpc = { default-features = false, path = "rpc/proof_of_existence" }
proof-of-existence-rpc-runtime-api = { default-features = false, path = "rpc/proof_of_existence/runtime-api" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, version = "30.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "32.0.0" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, version = "32.0.0" }
frame-system-benchmarking = { default-features = false, version = "32.0.0" }

substrate-wasm-builder = { version = "21.0.0" }
substrate-build-script-utils = { version = "11.0.0" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true
