[workspace.package]
authors = ["Horizen Labs <admin@horizenlabs.io>"]
edition = "2021"
repository = "https://github.com/HorizenLabs/zkVerify"
homepage = "https://horizenlabs.io"

[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "pallets/proof_of_existence",
    "primitives/hp-proof-of-existence",
    "primitives/hp-on-proof-verified",
    "native",
    "pallets/aggregate",
    "pallets/verifiers",
    "pallets/verifiers/macros",
    "primitives/hp-verifiers",
    "primitives/hp-groth16",
    "verifiers/fflonk",
    "verifiers/zksync",
    "verifiers/groth16",
    "verifiers/risc0",
    "verifiers/ultraplonk",
    "verifiers/proofofsql",
    "utils/native-cache",
    "relay-node",
    "relay-node/cli",
    "relay-node/service",
    "relay-node/test/client",
    "relay-node/test/service",
    "relay-node/test/runtime",
    "relay-node/test/runtime/constants",
    "relay-node/test/subsystem-helpers",
    "relay-node/test/substrate/client",
    "rpc/proof_of_existence",
    "rpc/proof_of_existence/runtime-api",
    "rpc/aggregate",
    "rpc/aggregate/runtime-api",
    "paratest/runtime",
    "paratest/node",
    "paratest/pallets/template",
    "patches/cumulus/client/relay-chain-inprocess-interface",
    "patches/cumulus/client/relay-chain-minimal-node/",
]

exclude = ["utils/generate-bags/node-runtime"]
# default-members = ["node"]

[workspace.dependencies]
clap = { version = "4.4.10", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.23.2", features = ["server"] }
binary-merkle-tree = { default-features = false, version = "15.0.0" }
snafu = { version = "0.8.0", default-features = false }
async-trait = { version = "0.1.57" }
serde = { version = "1.0.197" }
rstest = { version = "0.19.0" }
rstest_reuse = { version = "0.7.0" }
hex-literal = { version = "0.4.1" }
metered = { version = "0.6.1", default-features = false, package = "prioritized-metered-channel" }
array-bytes = { version = "6.2.3", default-features = false }
tokio = { version = "1.37.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }

sc-cli = { version = "0.46.0" }
sc-executor = { version = "0.40.0" }
sc-network = { version = "0.44.0" }
sc-service = { version = "0.45.0" }
sc-telemetry = { version = "24.0.0" }
sc-transaction-pool = { version = "37.0.0" }
sc-transaction-pool-api = { version = "37.0.0" }
sc-offchain = { version = "39.0.0" }
sc-consensus-babe = { version = "0.44.0" }
sc-consensus-babe-rpc = { version = "0.44.0" }
sc-consensus = { version = "0.43.0" }
sc-consensus-grandpa = { version = "0.29.0" }
sc-consensus-grandpa-rpc = { version = "0.29.0" }
sc-client-api = { version = "37.0.0" }
sc-sysinfo = { version = "37.0.0" }

pallet-transaction-payment = { default-features = false, version = "37.0.0" }

sp-io = { default-features = false, version = "38.0.0" }
sp-timestamp = { default-features = false, version = "34.0.0" }
sp-keyring = { version = "39.0.0" }
sp-keystore = { version = "0.40.0" }

native = { default-features = false, path = "native" }
pallet-poe = { path = "pallets/proof_of_existence", default-features = false }
pallet-aggregate = { path = "pallets/aggregate", default-features = false }
pallet-verifiers = { path = "pallets/verifiers", default-features = false }
pallet-verifiers-macros = { path = "pallets/verifiers/macros" }
hp-on-proof-verified = { default-features = false, path = "primitives/hp-on-proof-verified" }
hp-poe = { default-features = false, path = "primitives/hp-proof-of-existence" }
hp-verifiers = { path = "primitives/hp-verifiers", default-features = false }
hp-groth16 = { path = "primitives/hp-groth16", default-features = false }
pallet-fflonk-verifier = { path = "verifiers/fflonk", default-features = false }
pallet-zksync-verifier = { path = "verifiers/zksync", default-features = false }
pallet-groth16-verifier = { path = "verifiers/groth16", default-features = false }
pallet-risc0-verifier = { path = "verifiers/risc0", default-features = false }
pallet-ultraplonk-verifier = { path = "verifiers/ultraplonk", default-features = false }
pallet-proofofsql-verifier = { path = "verifiers/proofofsql", default-features = false }

native-cache = { path = "utils/native-cache" }
zkv-runtime = { path = "runtime", default-features = false }

# These dependencies are used for the node template's RPCs
sc-rpc = { version = "39.0.0" }
sc-rpc-api = { version = "0.43.0" }
sp-blockchain = { version = "37.0.0" }
sc-basic-authorship = { version = "0.44.0" }
substrate-frame-rpc-system = { version = "38.0.0" }
frame-election-provider-support = { version = "37.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "36.0.0", default-features = false }
pallet-session-benchmarking = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "40.0.0" }
frame-benchmarking-cli = { version = "42.0.0" }

codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
    "serde",
] }

pallet-offences = { default-features = false, version = "36.0.0" }
pallet-im-online = { default-features = false, version = "36.0.0" }
pallet-authorship = { default-features = false, version = "37.0.0" }
pallet-bags-list = { default-features = false, version = "36.0.0" }
pallet-session = { default-features = false, version = "37.0.0" }
pallet-staking = { default-features = false, version = "37.0.0" }
pallet-staking-reward-curve = { default-features = false, version = "12.0.0" }
pallet-babe = { default-features = false, version = "37.0.0" }
pallet-balances = { default-features = false, version = "38.0.0" }
frame-support = { default-features = false, version = "37.0.0" }
pallet-grandpa = { default-features = false, version = "37.0.0" }
pallet-sudo = { default-features = false, version = "37.0.0" }
pallet-multisig = { default-features = false, version = "37.0.0" }
pallet-scheduler = { default-features = false, version = "38.0.0" }
pallet-preimage = { default-features = false, version = "37.0.0" }
pallet-referenda = { default-features = false, version = "37.0.0" }
pallet-utility = { default-features = false, version = "37.0.0" }
pallet-vesting = { default-features = false, version = "37.0.0" }
anyhow = { default-features = false, version = "1.0.71" }
ismp = { default-features = false, version = "0.2.1" }
ismp-grandpa = { default-features = false, version = "1.15.0" }
pallet-hyperbridge = { default-features = false, version = "1.15.0" }
pallet-ismp-rpc = { default-features = false, version = "1.15.0" }
pallet-ismp = { default-features = false, version = "1.15.0" }
pallet-ismp-runtime-api = { default-features = false, version = "1.15.0" }
sp-mmr-primitives = { default-features = false, version = "34.1.0" }
pallet-whitelist = { default-features = false, version = "36.0.0" }
pallet-conviction-voting = { default-features = false, version = "37.0.0" }
pallet-treasury = { default-features = false, version = "36.0.0" }
pallet-bounties = { default-features = false, version = "36.0.0" }
pallet-child-bounties = { default-features = false, version = "36.0.0" }
pallet-proxy = { default-features = false, version = "37.0.0" }
frame-system = { default-features = false, version = "37.0.0" }
frame-try-runtime = { default-features = false, version = "0.43.0" }
pallet-timestamp = { default-features = false, version = "36.0.0" }
frame-executive = { default-features = false, version = "37.0.0" }
sp-api = { default-features = false, version = "34.0.0" }
sp-block-builder = { default-features = false, version = "34.0.0" }
sp-consensus = { default-features = false, version = "0.40.0" }
sp-consensus-babe = { default-features = false, features = [
    "serde",
], version = "0.40.0" }
finality-grandpa = { default-features = false, version = "0.16.2" }
sp-consensus-grandpa = { default-features = false, features = [
    "serde",
], version = "21.0.0" }
sp-core = { default-features = false, features = ["serde"], version = "34.0.0" }
sp-inherents = { default-features = false, version = "34.0.0" }
sp-offchain = { default-features = false, version = "34.0.0" }
sp-runtime = { default-features = false, features = [
    "serde",
], version = "39.0.0" }
sp-runtime-interface = { version = "28.0.0", default-features = false }
sp-session = { default-features = false, version = "35.0.0" }
sp-staking = { default-features = false, version = "34.0.0" }
sp-std = { default-features = false, version = "14.0.0" }
sp-storage = { default-features = false, version = "21.0.0" }
sp-transaction-pool = { default-features = false, version = "34.0.0" }
sp-version = { default-features = false, features = [
    "serde",
], version = "37.0.0" }
serde_json = { version = "1.0.114", default-features = false, features = [
    "alloc",
] }
sp-weights = { default-features = false, version = "31.0.0" }
sp-genesis-builder = { default-features = false, version = "0.15.0" }
sp-npos-elections = { default-features = false, version = "34.0.0" }
proof-of-existence-rpc = { default-features = false, path = "rpc/proof_of_existence" }
proof-of-existence-rpc-runtime-api = { default-features = false, path = "rpc/proof_of_existence/runtime-api" }
aggregate-rpc = { default-features = false, path = "rpc/aggregate" }
aggregate-rpc-runtime-api = { default-features = false, path = "rpc/aggregate/runtime-api" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, version = "34.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "37.0.0" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, version = "37.0.0" }
frame-system-benchmarking = { default-features = false, version = "37.0.0" }

substrate-wasm-builder = { version = "24.0.0" }
substrate-build-script-utils = { version = "11.0.0" }

# Used for relay chain

zkv-relay = { path = "relay-node" }
zkv-cli = { path = "relay-node/cli" }
service = { package = "zkv-service", path = "relay-node/service" }

polkadot-node-core-pvf = { version = "17.0.0" }
polkadot-node-core-pvf-prepare-worker = { version = "15.0.0" }
polkadot-overseer = { version = "17.0.0" }
polkadot-node-core-pvf-common = { version = "15.0.0" }
polkadot-node-core-pvf-execute-worker = { version = "15.0.0" }


sc-authority-discovery = { version = "0.44.0" }
sc-block-builder = { version = "0.42.0" }
sc-chain-spec = { version = "37.0.0" }
sc-client-db = { version = "0.44.0" }
sc-consensus-slots = { version = "0.43.0" }
sc-network-common = { version = "0.43.0" }
sc-network-sync = { version = "0.43.0" }
sc-sync-state-rpc = { version = "0.44.0" }
sc-keystore = { version = "33.0.0" }
telemetry = { package = "sc-telemetry", version = "24.0.0" }
sp-authority-discovery = { version = "34.0.0", default-features = false }
consensus_common = { package = "sp-consensus", version = "0.40.0" }
sp-state-machine = { version = "0.43.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.17.0" }
substrate-state-trie-migration-rpc = { version = "37.0.0" }

polkadot-node-metrics = { version = "17.0.0" }    # Our own
polkadot-node-primitives = { version = "15.0.0" }
sc-storage-monitor = { version = "0.22.0" }
sc-tracing = { version = "37.0.0" }
sp-maybe-compressed-blob = { version = "11.0.0" }

gum = { package = "tracing-gum", version = "15.0.0" }

polkadot-approval-distribution = { version = "17.0.0" }
polkadot-availability-bitfield-distribution = { version = "17.0.0" }
polkadot-availability-distribution = { version = "17.0.0" }
polkadot-availability-recovery = { version = "17.0.0" }
polkadot-collator-protocol = { version = "17.0.0" }
polkadot-dispute-distribution = { version = "17.0.0" }
polkadot-gossip-support = { version = "17.0.0" }
polkadot-network-bridge = { version = "17.0.0" }
polkadot-node-collation-generation = { version = "17.0.0" }
polkadot-node-core-approval-voting = { version = "17.0.0" }
polkadot-node-core-av-store = { version = "17.0.0" }
polkadot-node-core-backing = { version = "17.0.0" }
polkadot-node-core-bitfield-signing = { version = "17.0.0" }
polkadot-node-core-candidate-validation = { version = "17.0.0" }
polkadot-node-core-chain-api = { version = "17.0.0" }
polkadot-node-core-chain-selection = { version = "17.0.0" }
polkadot-node-core-dispute-coordinator = { version = "17.0.0" }
polkadot-node-core-prospective-parachains = { version = "16.0.0" }
polkadot-node-core-provisioner = { version = "17.0.0" }
polkadot-node-core-pvf-checker = { version = "17.0.0" }
polkadot-node-core-runtime-api = { version = "17.0.0" }
polkadot-statement-distribution = { version = "17.0.0" }

polkadot-core-primitives = { version = "15.0.0" }
polkadot-node-core-parachains-inherent = { version = "17.0.0" }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "15.0.0", default-features = false }
polkadot-rpc = { version = "17.0.0" }
polkadot-node-subsystem = { version = "17.0.0" }
polkadot-node-subsystem-util = { version = "17.0.0" }
polkadot-node-subsystem-types = { version = "17.0.0" }
polkadot-runtime-parachains = { version = "16.0.0", default-features = false }
polkadot-node-network-protocol = { version = "17.0.0" }

authority-discovery-primitives = { package = "sp-authority-discovery", version = "34.0.0", default-features = false }
pallet-authority-discovery = { default-features = false, version = "37.0.0" }
polkadot-runtime-common = { default-features = false, version = "16.0.0" }
sc-rpc-spec-v2 = { version = "0.44.0" }

# TEST
substrate-test-client = { path = "relay-node/test/substrate/client" }
sp-trie = { version = "37.0.0" }
sp-arithmetic = { version = "26.0.0" }
substrate-test-utils = { version = "3.0.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.10.0" }
sc-utils = { version = "17.0.0" }
sp-application-crypto = { version = "38.0.0", default-features = false }
pallet-indices = { version = "37.0.0", default-features = false }
pallet-xcm = { version = "16.0.0", default-features = false }
pallet-xcm-benchmarks = { version = "16.0.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", version = "16.0.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", version = "16.0.0", default-features = false }
xcm = { package = "staging-xcm", version = "14.1.0", default-features = false }

pallet-aura = { default-features = false, version = "36.0.0" }
sp-consensus-aura = { default-features = false, version = "0.40.0" }

# Cumulus
cumulus-client-cli = { version = "0.17.0" }
cumulus-client-collator = { version = "0.17.0" }
cumulus-client-consensus-aura = { version = "0.17.0" }
cumulus-client-consensus-common = { version = "0.17.0" }
cumulus-client-consensus-proposer = { version = "0.15.0" }
cumulus-client-service = { version = "0.17.0" }
cumulus-primitives-parachain-inherent = { version = "0.15.0" }
cumulus-relay-chain-interface = { version = "0.17.0" }
cumulus-primitives-aura = { default-features = false, version = "0.15.0" }

cumulus-pallet-aura-ext = { default-features = false, version = "0.16.0" }
cumulus-pallet-dmp-queue = { default-features = false, version = "0.16.0" }
cumulus-pallet-parachain-system = { default-features = false, version = "0.16.0" }
cumulus-pallet-session-benchmarking = { default-features = false, version = "18.0.0" }
cumulus-pallet-xcm = { default-features = false, version = "0.16.0" }
cumulus-pallet-xcmp-queue = { default-features = false, version = "0.16.0" }
cumulus-primitives-core = { default-features = false, version = "0.15.0" }
cumulus-primitives-utility = { default-features = false, version = "0.16.0" }
pallet-message-queue = { default-features = false, version = "40.0.0" }
pallet-collator-selection = { default-features = false, version = "18.0.0" }
parachains-common = { default-features = false, version = "17.0.0" }
parachain-info = { package = "staging-parachain-info", default-features = false, version = "0.16.0" }
cumulus-relay-chain-rpc-interface = { version = "0.17.0" }
substrate-rpc-client = { version = "0.43.0" }

[patch.crates-io]
cumulus-relay-chain-inprocess-interface = { path = "patches/cumulus/client/relay-chain-inprocess-interface" }
cumulus-relay-chain-minimal-node = { path = "patches/cumulus/client/relay-chain-minimal-node" }
[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true
